# holmes

./: .env.dev  .gitignore  main.py  pyproject.toml
app/ai/: classifier.py  kb.py  mistral_ai.py  open_ai.py
app/integrations/: zendesk.py
app/utils/: constants.py  logger.py  paths.py  settings.py
